fix: start time and elapsed time calculation. Replaced all instances with AWS DTO as common DTO does not support elapsed time calculations.